# attest

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: test.yml
crates/cli/: Cargo.toml
crates/cli/src/: dump.rs  main.rs  measure.rs  verify.rs
crates/measure/: Cargo.toml
crates/measure/src/: azure.rs  event.rs  lib.rs  types.rs  uki.rs
crates/measure/src/dcap/: gcp.rs  gpt.rs  mod.rs  self_hosted.rs  td_hob.rs  tdvf.rs
crates/measure/src/platform_events/: machine_configs.json  mod.rs  mrtds.json
crates/pccs/: Cargo.toml
crates/prove/: Cargo.toml
crates/prove/src/: lib.rs  platform.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/verify/: Cargo.toml
crates/verify/src/: dcap.rs  gcp.rs  lib.rs  self_hosted.rs
crates/verify/src/azure/: ak_certificate.rs  ak_pubkey.rs  error.rs  mod.rs
src/measure/dcap/: gcp.rs
