[workspace]
resolver = "3"

members = [
    "crates/measure",
    "crates/prove",
    "crates/verify",
    "crates/pccs",
    "crates/cli",
]

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
manual_let_else = "warn"
match_same_arms = "warn"
uninlined_format_args = "warn"
unused_async = "warn"

[workspace.dependencies]
measure = { path = "crates/measure", package = "attest-measure" }
prove = { path = "crates/prove", package = "attest-prove" }
verify = { path = "crates/verify", package = "attest-verify" }
pccs = { path = "crates/pccs", package = "attest-pccs" }
