[package]
name = "attest-measure"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "TEE attestation measurement: predict expected register values from images"
repository = "https://github.com/flashbots/attest"
keywords = ["attestation", "CVM", "TDX"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking"] }
parity-scale-codec = { version = "3", features = ["derive"] }
object = { version = "0.37", default-features = false, features = ["pe", "read"] }
authenticode = { version = "0.5.0", features = ["object", "std"] }
hex = "0.4"
hex-literal = "1"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
