[package]
name = "attest-types"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Shared wire-format types for the attest workspace"
repository = "https://github.com/flashbots/attest"
keywords = ["attestation", "CVM", "TDX"]

[dependencies]
parity-scale-codec = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64", "hex"] }

[lints]
workspace = true
